2-cluster/traefik/00-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
